Update NAMESPACE, DESCRIPTION, and add more functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,16 @@ Version: 0.1.0
 Authors@R: person("Craig", "McGowan", email = "mcgowan.cj@gmail.com",
   role = c("aut", "cre"))
 Description: 
-    Helper functions for tasks such as making print-friendly bivariate 
-    tables, sample size flow counts, and more. Also contains R approximations
-    of some common, useful SAS/Stata functions.
+  Helper functions for tasks such as making print-friendly bivariate 
+  tables, sample size flow counts, and more. Also contains R approximations
+  of some common, useful SAS/Stata functions.
+Imports: 
+  dplyr (>= 0.7),
+  tidyr,
+  purrr,
+  broom,
+  stringr,
+  haven
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
