--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(gladder)
 export(ladder)
 export(nagelkerke)
 export(proc_means)
+export(pwcorr)
 export(univar_freq)
 import(broom)
 import(dplyr)
