Update package documentation and add last of the initial functions to include.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(ladder)
 export(nagelkerke)
 export(proc_means)
 export(pwcorr)
+export(sample_flow)
+export(stata_tidy)
 export(univar_freq)
 import(broom)
 import(dplyr)
