Add function to plot density with normal distribution overlaid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bivariate_compare)
 export(gladder)
 export(ladder)
 export(nagelkerke)
+export(norm_dist_plot)
 export(proc_means)
 export(pwcorr)
 export(sample_flow)
