--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
-Package: helpR
-Type: Package
-Title: Miscellaneous helper and SAS/Stata duplicate functions
+Package: describedata
+Title: Miscellaneous descriptive and SAS/Stata duplicate functions
 Version: 0.1.0
 Authors@R: person("Craig", "McGowan", email = "mcgowan.cj@gmail.com",
   role = c("aut", "cre"))
 Description:
-  Helper functions for tasks such as making print-friendly bivariate 
+  Helper functions for descriptive tasks such as making print-friendly bivariate 
   tables, sample size flow counts, and more. Also contains R approximations
   of some common, useful SAS/Stata functions.
 Imports:
