--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,29 @@ export(stata_tidy)
 export(univar_freq)
 import(broom)
 import(dplyr)
+import(forcats)
 import(ggplot2)
 import(haven)
 import(lmtest)
 import(purrr)
 import(stringr)
 import(tidyr)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(stats,IQR)
+importFrom(stats,aov)
+importFrom(stats,chisq.test)
+importFrom(stats,cor)
+importFrom(stats,dnorm)
+importFrom(stats,fisher.test)
+importFrom(stats,kruskal.test)
+importFrom(stats,logLik)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,nobs)
+importFrom(stats,pf)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,shapiro.test)
+importFrom(stats,terms)
+importFrom(stats,update)
