--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,4 +24,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/craigjmcgowan/describedata
 Suggests: testthat
